@@ -20,6 +20,7 @@ Released ?????? ??, ????
 - South Africa updates (lispwarez, dr-p)
 - Canada updates (dr-p)
 - PRTE (PortugalExt) fix (dr-p)
+- Norway updates (dr-p)
 - README iso codes typo / improvements (dr-p)
 
 Version 0.11.2
